# openrussian-tui

./: LICENSE.txt  README.md  openrussian.py  pyproject.toml
src/openrussian_tui/: __about__.py  __init__.py  entry_points.py  openrussian.py
