[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openrussian-tui"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "qinyx-endeavour", email = "oreo_queen@outlook.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["httpx", "textual"]

[project.urls]
Documentation = "https://github.com/qinyx-endeavour/openrussian-tui#readme"
Issues = "https://github.com/qinyx-endeavour/openrussian-tui/issues"
Source = "https://github.com/qinyx-endeavour/openrussian-tui"

[tool.hatch.version]
path = "src/openrussian_tui/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/openrussian_tui tests}"

[tool.coverage.run]
source_pkgs = ["openrussian_tui", "tests"]
branch = true
parallel = true
omit = [
  "src/openrussian_tui/__about__.py",
]

[tool.coverage.paths]
openrussian_tui = ["src/openrussian_tui", "*/openrussian-tui/src/openrussian_tui"]
tests = ["tests", "*/openrussian-tui/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
[project.scripts]
calculator = "openrussian_tui.entry_points:openrussian"
